# zml-torch-activation-example

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: bert.py  llama.py  llama_3_2_1B_Instruct.py  main.py  modern_bert.py
src/utils/: logging.py  zml.py
