[tool.poetry]
name = "zml-activation-example"
version = "0.0.1"
description = ""
authors = ["Victor MOIN"]
readme = "README.md"
exclude = [
    ".env"
]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 119
target-version = "py312"

[tool.ruff.lint]
# Never enforce `E501` (line length violations).
# ignore = ["C901", "E501", "E741", "F402", "F823" ]
# per-file-ignores."__init__.py" = ["E402", "F401", "F403", "F811"]
select = ["C", "E", "F", "I", "W"]
isort.lines-after-imports = 2

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automaticallsy detect the appropriate line ending.
line-ending = "auto"